feat: hotel-service Availability API의 비동기 로직 변경, DB 조회 로직 최적화 (#26)